thêm logic tính elo